[tool.poetry]
name = "myapi"
version = "0.1.0"
description = "API that helps you manage library transaction"
authors = ["adii21-Ux <adityasangave2112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
